--- a/config/database.yml
+++ b/config/database.yml
@@ -51,6 +51,6 @@ production:
   adapter: postgresql
   encoding: unicode
   pool: 5
-  database: message-board_production
-  username: message-board
-  password: <%= ENV['MESSAGE-BOARD_DATABASE_PASSWORD'] %>
+  database: golfscore_production
+  username: golfscore
+  password: <%= ENV['GOLFSCORE_DATABASE_PASSWORD'] %>
