--- a/config/database.yml
+++ b/config/database.yml
@@ -14,9 +14,8 @@ default: &default
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password: password
+  password:
   socket: /tmp/mysql.sock
-  host: db
 
 development:
   <<: *default
