--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
+    "vue": "^2.6.12",
+    "vue-loader": "^15.9.6",
+    "vue-template-compiler": "^2.6.12",
     "webpack": "^4.0.0"
   },
   "version": "0.1.0",
